--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,18 @@
 .App-link {
   color: #61dafb;
 }
+
+.starship-el {
+  background-color: green;
+  color: white;
+  border-radius: 10px;
+  padding: 2em;
+  margin: 2em;
+}
+
+#starship-container {
+  display: flex;
+  flex-wrap: wrap;
+  height: 100%;
+  width: 100%;
+}
